--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="main"></div>
-    <script src="./index.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
