--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
     <head>
         <meta charset="UTF-8">
         <title>elm-billing</title>
